# aoc-2023

aoc_python/: pyproject.toml
aoc_python/src/inputs/: test.txt
aoc_python/src/solutions/: 10day.py  11day.py  12day.py  14day.py  16day.py  17day.py  1day.py  22day.py  25day.py  2day.py  3day.py  4day.py  5day.py  7day.py  8day.py  9day.py
