[tool.poetry]
name = "aoc-python"
version = "0.1.0"
description = ""
authors = ["liamxpalmavisser <liam.palmavisser@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
