[tool.poetry]
name = "aoc-python"
version = "0.1.0"
description = ""
authors = ["liamxpalmavisser <liam.palmavisser@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_python"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.7.1"
black = "^23.11.0"
tqdm = "^4.66.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
